@@ -24,5 +24,6 @@ t/lib/Hello.pm
 t/Plack-App-Tags-HTML/01-use.t
 t/Plack-App-Tags-HTML/02-version.t
 t/Plack-App-Tags-HTML/03-app-hello.t
+t/Plack-App-Tags-HTML/04-app-hello-inline.t
 xt/Plack-App-Tags-HTML/01-pod_coverage.t
 xt/Plack-App-Tags-HTML/02-pod.t
