@@ -1,4 +1,5 @@
 0.04
+ - Add test with inline component.
  - Fix bugtracker url.
  - Update README.
 
